# caiman

./: .gitignore  Cargo.toml  LICENSE  README.md  example.cair
caiman-bench/: Cargo.toml
caiman-bench/benches/: basic_bench.rs  benchmark.rs  matmul_bench.rs
caiman-bench/benches/kernels/: matvecmul.wgsl
caiman-bench/src/: lib.rs  pass.rs  util.rs
caiman-frontend/: Cargo.toml  TODO.txt  build.rs  saxpyexample.txt
caiman-frontend/example_programs/: funclet3.out  funclet_call1.out  pipeline1.out  terrible.out
caiman-frontend/frontend-test/dual_language/: foo2.casl  turnt.toml
caiman-frontend/frontend-test/parse_new_lang/: holes.caiman  just_function_class.out  just_pipeline.caiman  just_schedule.out  just_timeline.caiman  just_timeline.out  trivial_desugared.caiman  trivial_desugared.out
caiman-frontend/frontend-test/run_new_lang/: external_cpu_call.caiman  internal_call_noargs.caiman  operators.caiman
caiman-frontend/frontend-test/scheduling_language/: foo.casl  foo.out  turnt.toml
caiman-frontend/frontend-test/value_language/check/: no_err.vl  type_incompatible1.out  type_incompatible1.vl  type_mismatch1.out  type_mismatch3.vl  unbound_var.out  unbound_var.vl
caiman-frontend/frontend-test/value_language/elaborate/: foo.out  if.out  if.vl  turnt.toml
caiman-frontend/frontend-test/value_language/old/: statement_jamboree.vl
caiman-frontend/frontend-test/value_language/parse/: pres.vl  type_annot.out  type_mismatch2.vl
caiman-frontend/frontend-test/vil/: 2ifs.out  nested_if.cavl  turnt.toml
caiman-frontend/notes/: nested_if_example.txt  saxpyexample.txt  sdf
caiman-frontend/src/: ast.rs  ast_factory.rs  check.rs  compiler.rs  error.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  run_parser.rs  stage.rs  to_ir.rs  type_elab.rs  typing.rs
caiman-frontend/src/.old/scheduling_language/: ast.rs  compiler.rs  mod.rs  parser.lalrpop  parser.rs  schedulable.rs
caiman-frontend/src/.old/spec/: input.rs  nodes.rs
caiman-frontend/src/.old/to_ir/: .old  dual_compatibility.rs  error.rs  ir_funclets.rs  ir_typing.rs  label.rs  to_se_funclets.rs  to_value_funclets.rs
caiman-frontend/src/.old/value_language/: ast_factory.rs  check.rs  compiler.rs  mod.rs  parser.lalrpop  run_parser.rs  type_elab.rs  typing.rs
caiman-frontend/src/ir_version/: ast.rs  main.rs  parser.lalrpop  parser.rs
caiman-frontend/src/parse/: ast.rs  ast_factory.rs  mod.rs  run_parser.rs
caiman-frontend/src/scheduling_language/: :w  ast.rs  ast_factory.rs  compiler.rs  mod.rs  parser.lalrpop  parser.rs  schedulable.rs
caiman-frontend/src/spec/: input.rs  mod.rs  nodes.rs
caiman-frontend/src/syntax/: ast.rs  ast_factory.rs  compile.rs  mod.rs  parser.lalrpop  parser.rs  run_parser.rs
caiman-frontend/src/to_ir/: context.rs  dual_compatibility.rs  error.rs  funclet_util.rs  function_classes.rs  index.rs  ir_funclets.rs  ir_typing.rs  label.rs  mod.rs  pipelines.rs  scheduling_funclets.rs  scheduling_funclets_ir.rs  spatial_funclets.rs  to_se_funclets.rs  to_value_funclets.rs  to_vil.rs  typing.rs  vil.rs
caiman-frontend/src/to_ir_new/: binops.rs  external_cpu.rs  funclet_util.rs  function_classes.rs  label.rs  mod.rs  pipelines.rs  scheduling_funclets.rs  scheduling_funclets_ir.rs  spatial_funclets.rs  timeline_funclets.rs  typing.rs  value_funclets.rs
caiman-frontend/src/value_language/: ast.rs  ast_factory.rs  calc_expr_typing.rs  check.rs  compiler.rs  error.rs  generated_parser.lalrpop  mod.rs  parser.lalrpop  parser.rs  run_parser.rs  to_ir.rs  type_elab.rs  typing.rs
caiman-frontend/test/: external_reverse_test.cm  external_test.cm  gpu_external_test.cm  kd_tree.cm  rec_sum_test.cm  select_test.cm  turnt.toml  vadd2_test.cm
demo/: Cargo.toml  (+5 more)
high-level-caiman/: Cargo.toml  README.md  build.rs
high-level-caiman/examples/: external_reverse_test.cm  external_test.cm  gpu_external_test.cm  kd_tree.cm  min_test.cm  rec_sum_test.cm  select_test.cm  vadd2_test.cm
high-level-caiman/src/: error.rs  lib.rs  main.rs
high-level-caiman/src/lower/: cfg.rs  global_context.rs  lower_schedule.rs  lower_spec.rs  mod.rs
high-level-caiman/src/normalize/: flatten_expr.rs  if_to_seq.rs  mod.rs  record_expansion.rs  sched_rename.rs  yields.rs
high-level-caiman/src/parse/: ast.rs  ast_factory.rs  mod.rs  parser.lalrpop  parser.rs
high-level-caiman/src/typing/: context.rs  mod.rs  sched.rs  specs.rs  test.rs  types.rs  unification.rs
(+1274 files in other folders)
