[package]
name = "caiman"
version = "0.1.0"
edition = "2018"
resolver = "2"
build = "build/build.rs"

[workspace]

[dependencies]
itertools = "0.10.5"
pest = "2.6.0"
pest_derive = "2.6.0"
pest_consume = "1.1.3"
serde = "1.0.130"
serde_derive = "1.0.130"
bitflags = "1.3"
clap = { version = "~2.34.0", optional = true }
ron = "0.7"
naga = { version = "0.12", features = [
    "clone", "serialize", "deserialize", "wgsl-in", "wgsl-out", "spv-in", "spv-out", "glsl-in"
]}
debug-ignore = "1.0.5"

[build-dependencies]
caiman-spec = { path = "caiman-spec" }

[dev-dependencies]
caiman-ref = { path = "caiman-ref" }
caiman-rt = { path = "caiman-rt" }
caiman-test = { path = "caiman-test" }

[features]
default = [
    #"assembly",
    "build-binary"
]
build-binary = [ "clap" ]
assembly = []
fusion = []

[lib]
name = "caiman"
path = "src/lib.rs"

[[bin]]
name = "caimanc"
required-features = [ "build-binary" ]
path = "src/main.rs"
