[package]
name = "caiman-bench"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.15", features = ["glsl", "spirv"] }
futures = "0.3"
naga = "0.11"
rustc-hash = "1.1"
bytemuck = "1.13"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = { version = "0.8.5"}

[profile.bench]
debug = true

[[bench]]
name = "benchmark"
harness = false
