[package]
name = "hlc"
version = "0.0.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"
caiman-spec = { path = "../caiman-spec" }

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
clap = { version = "3.2.6", features = ["derive"] }
caiman = { path = "../" }

[lib]
name = "hlc"
path = "src/lib.rs"
